# auto_reserve_clinic_system

./: .gitignore  .pre-commit-config.yaml  pyproject.toml
app/: __init__.py  routes.py
app/database_manager/: manege_db.py  util.py
app/models/: __init__.py  clinic_info.py  registed_clinic.py  reserve_info.py  user.py
app/notifier/: line_notifier.py
app/reserve_engine/: main.py
app/reserve_engine/modules/: util.py
app/reserve_engine/modules/clinics/: omori_jibika.py
app/static/: clinic_info.json  scripts.js  styles.css
app/templates/: applications.html  clinic_regist_info.html  confirmation.html  index.html
